[package]
name = "mdbx-rs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure Rust implementation of libmdbx - an extremely fast embedded key-value database"
repository = "https://github.com/igor53627/mdbx-rs-releases"
documentation = "https://docs.rs/mdbx-rs"
keywords = ["database", "embedded", "key-value", "lmdb", "mdbx"]
categories = ["database", "data-structures"]
readme = "README.md"

[lib]
name = "mdbx_rs"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = []
