[package]
name = "mdbx-rs"
version = "0.2.13"
edition = "2021"
license = "Apache-2.0"
description = "FFI bindings to mdbx-rs, a fast embedded key-value database (downloads prebuilt binaries)"
repository = "https://github.com/igor53627/mdbx-rs-releases"
documentation = "https://docs.rs/mdbx-rs"
keywords = ["database", "embedded", "key-value", "lmdb", "mdbx"]
categories = ["database", "data-structures"]
readme = "README.md"

[lib]
name = "mdbx_rs"

[dependencies]
libc = "0.2"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = []

[profile.release]
panic = "abort"
